Fix incorrect menu behavior on narrow screens (#205)
* Fix incorrect menu behavior on narrow screens

See https://github.com/reactiveui/website/issues/163

* Comments

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -259,3 +259,8 @@ pre {
 .hljs-link {
   text-decoration: underline;
 }
+
+// Issue 163
+.affix {
+  position: static;
+}
